--- a/templates/language_chooser.html
+++ b/templates/language_chooser.html
@@ -5,7 +5,7 @@
 
     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
         aria-expanded="false">
-        <span class="badge lang active">{{ current_language }}</span>
+        <span class="nav-circle lang active">{{ current_language }}</span>
     </a>
 
     <ul class="dropdown-menu">
