Fixed fontawesome icons (no hover-underline), added complete Filters mockup

--- a/global_app/templates/all_deals.html
+++ b/global_app/templates/all_deals.html
@@ -24,9 +24,9 @@
 {% endblock %}
 
 {% block subnav_inner %}
-    <a h6ref="foobar/map"><span class="lm-map-marker"></span>Map</a>
-    <a href="foobar/grid"><span class="lm-table"></span>Data</a>
-    <a href="foobar/charts"><span class="lm-bar-chart"></span>Charts</a>
+    <a href="foobar/map"><i class="lm-map-marker"></i>Map</a>
+    <a href="foobar/grid"><i class="lm-table"></i>Data</a>
+    <a href="foobar/charts"><i class="lm-bar-chart"></i>Charts</a>
 {% endblock %}
 
 {% block content %}
