--- a/maplandmatrix/templates/index.html
+++ b/maplandmatrix/templates/index.html
@@ -21,8 +21,15 @@
     <li>{% trans "Map" %}</li>
 {% endblock %}
 
+{% block subnav_inner %}
+    <a href="foobar/map"><i class="lm-map-marker"></i>Map</a>
+    <a href="foobar/grid"><i class="lm-table"></i>Data</a>
+    <a href="foobar/charts"><i class="lm-bar-chart"></i>Charts</a>
+{% endblock %}
+
 {% block content %}
     {% include "filters.html" %}
+    {{ filters }}
     <div id="alert_placeholder"></div>
 
     <div id="map" class="map" title='All Deals'></div>
