--- a/global_app/templates/includes/dealpanels.html
+++ b/global_app/templates/includes/dealpanels.html
@@ -65,6 +65,10 @@
             });
         </script>
 
+        {# include django_select2 JS; must be done in form loop because it's a property of form.media #}
+        {{ form.media.js }}
+
+
     {% endfor %}
 
 {% endif %}           {# forms #}
