--- a/templates/language_chooser.html
+++ b/templates/language_chooser.html
@@ -5,13 +5,13 @@
 
     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
         aria-expanded="false">
-        <span class="nav-circle lang active">{{ current_language }}</span>
+        <span class="nav-circle">{{ current_language }}</span>
     </a>
 
     <ul class="dropdown-menu">
         {% for language in languages %}
-        <li class="lang{% if current_language == language.0 %} active{% endif %}">
-            <a href="{% page_language_url language.0 %}" title="{% trans "Change to language:" %} {{ language.1 }}"><span class="language">{{ language.1 }}</span></a>
+        <li class="language{% if current_language == language.0 %} active{% endif %}">
+            <a href="{% page_language_url language.0 %}" title="{% trans "Change to language:" %} {{ language.1 }}"><span>{{ language.1 }}</span></a>
         </li>
         {% if not forloop.last %}
         <li role="separator" class="divider"></li>
