--- a/templates/start.html
+++ b/templates/start.html
@@ -5,69 +5,90 @@
 {% block breadcrumb %}{% endblock %}
 
 {% block content %}
-<div class="row">
-    <div class="span4">
-    	{% placeholder "Left column1" %}
-    </div>
-    <div class="span4">
-        <h4>Watch the video introduction</h4>
-        <a href="http://www.youtube.com/embed/XHUuTaZR17o?autoplay=1" class="thumbnail fancybox">
-            <img src="/media/img/video-thumb.jpg"></img>
-        </a>
-    </div>
-    <div class="span4">
-    	{% placeholder "Right column" %}
-   </div>
-</div>
-<div class="row">
-    <div class="span12">
-    	{% placeholder "Both columns" %}
-    </div>
-</div>
-<div class="row">
-  <div class="span8">
     <div class="row">
-      <div class="span4">
-        {% placeholder "Middle left" %}
-      </div>
-      <div class="span4">
-        <div class="well-square social">
-          <a href="http://eepurl.com/AHK0r" target="_blank"><img src="/media/img/newsletter-icon.png"></img>Subscribe to the newsletter</a>
+        <div class="col-md-4">
+            {% placeholder "Left column1" %}
         </div>
-        <div class="well-square social">
-          <a href="https://www.facebook.com/LandMatrix" target="_blank"><img src="/media/img/facebook-icon.png"></img>Connect with facebook</a>
+        <div class="col-md-4">
+            <h4>Watch the video introduction</h4>
+            <a href="http://www.youtube.com/embed/XHUuTaZR17o?autoplay=1" class="thumbnail fancybox">
+                <img src="/media/img/video-thumb.jpg"></img>
+            </a>
         </div>
-        <div class="well-square social">
-          <a href="https://twitter.com/intent/user?screen_name=Land_Matrix"><img src="/media/img/twitter-icon.png"></img>Follow @landmatrix</a>
+        <div class="col-md-4">
+            {% placeholder "Right column" %}
         </div>
-      </div>
     </div>
+    <div class="row">
+        <div class="col-md-12">
+            {% placeholder "Both columns" %}
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-8">
+            <div class="row">
+                <div class="col-md-4">
+                    {% placeholder "Middle left" %}
+                </div>
+                <div class="col-md-4">
+                    <div class="well-square social">
+                        <a href="http://eepurl.com/AHK0r" target="_blank"><img
+                                src="/media/img/newsletter-icon.png"></img>Subscribe to the newsletter</a>
+                    </div>
+                    <div class="well-square social">
+                        <a href="https://www.facebook.com/LandMatrix" target="_blank"><img
+                                src="/media/img/facebook-icon.png"></img>Connect with facebook</a>
+                    </div>
+                    <div class="well-square social">
+                        <a href="https://twitter.com/intent/user?screen_name=Land_Matrix"><img
+                                src="/media/img/twitter-icon.png"></img>Follow @landmatrix</a>
+                    </div>
+                </div>
+            </div>
 
-    <div class="row">
-      <div class="span8">
-            {% placeholder "Bottom left" %}
-      </div>
+            <div class="row">
+                <div class="col-md-8">
+                    {% placeholder "Bottom left" %}
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <a class="twitter-timeline" height="555" href="https://twitter.com/search?q=%23landmatrix"
+               data-widget-id="344020652090597377">Tweets about "#landmatrix"</a>
+            <script>!function (d, s, id) {
+                var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https';
+                if (!d.getElementById(id)) {
+                    js = d.createElement(s);
+                    js.id = id;
+                    js.src = p + "://platform.twitter.com/widgets.js";
+                    fjs.parentNode.insertBefore(js, fjs);
+                }
+            }(document, "script", "twitter-wjs");</script>
+            <a href="https://twitter.com/Land_Matrix" class="twitter-follow-button" data-show-count="false"
+               data-size="large">Follow @Land_Matrix</a>
+            <script>!function (d, s, id) {
+                var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https';
+                if (!d.getElementById(id)) {
+                    js = d.createElement(s);
+                    js.id = id;
+                    js.src = p + '://platform.twitter.com/widgets.js';
+                    fjs.parentNode.insertBefore(js, fjs);
+                }
+            }(document, 'script', 'twitter-wjs');</script>
+        </div>
     </div>
-  </div>
-  <div class="span4">
-    <a class="twitter-timeline" height="555" href="https://twitter.com/search?q=%23landmatrix" data-widget-id="344020652090597377">Tweets about "#landmatrix"</a>
-        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-        <a href="https://twitter.com/Land_Matrix" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @Land_Matrix</a>
-        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-  </div>
-</div>
 {% endblock %}
 
 {% block footer_scripts %}
-{{ block.super }}
-<script type="text/javascript" src="{% static "legacy/vendor/jquery.fancybox.js?v=2.1.4" %}"></script>
-<link rel="stylesheet" type="text/css" href="{% static "css/legacy/jquery.fancybox.css?v=2.1.4" media="screen" />
-<script type="text/javascript">
-$(document).ready(function () {
+    {{ block.super }}
+    <script type="text/javascript" src="{% static "legacy/vendor/jquery.fancybox.js?v=2.1.4" %}"></script>
+    <link rel="stylesheet" type="text/css" href="{% static "css/legacy/jquery.fancybox.css?v=2.1.4" media="screen" />
+<script type=" text/javascript">
+    $(document).ready(function () {
     $(".fancybox").fancybox({
-        type: 'iframe'
+    type: 'iframe'
     });
-});
-</script>
+    });
+    </script>
 {% endblock %}
 
